--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <link rel="icon" type="image/svg+xml" href="/src/assets/logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>twofoldtwins</title>
+    <style>
+      body {
+        zoom: 80%;
+      }
+    </style>
   </head>
   <body>
     <div id="root"></div>
